--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   fluttertoast: ^8.0.9
   another_flushbar: ^1.10.28
   shared_preferences: ^2.0.13
+  carousel_slider: ^4.1.1
+  flutter_spinkit: ^5.1.0
+  connectivity_plus: ^2.3.0
+  flutter_easyloading: ^3.0.3
 
 dev_dependencies:
   flutter_test:
